--- a/lightyear_sync/Cargo.toml
+++ b/lightyear_sync/Cargo.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/cBournhonesque/lightyear"
 
 [features]
 default = ["std"]
+std = ["lightyear_transport/std"]
 client = [
   "lightyear_connection/client",
   "lightyear_messages/client",
@@ -20,7 +21,6 @@ server = [
   "lightyear_messages/server",
   "lightyear_transport/server",
 ]
-std = []
 
 [dependencies]
 lightyear_utils.workspace = true
