--- a/lightyear_frame_interpolation/Cargo.toml
+++ b/lightyear_frame_interpolation/Cargo.toml
@@ -9,7 +9,8 @@ description = "IO primitives for the lightyear networking library"
 repository = "https://github.com/cBournhonesque/lightyear"
 
 [features]
-default = []
+default = ["std"]
+std = ["lightyear_replication/std"]
 
 [dependencies]
 lightyear_core.workspace = true
