Drop `bevy` from `lightyear_webtransport`

--- a/lightyear_webtransport/Cargo.toml
+++ b/lightyear_webtransport/Cargo.toml
@@ -13,17 +13,13 @@ workspace = true
 
 [package.metadata.docs.rs]
 all-features = true
-rustflags    = ["--cfg=web_sys_unstable_apis"]
-targets      = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
+rustflags = ["--cfg=web_sys_unstable_apis"]
+targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
 
 [features]
 default = ["self-signed"]
-client = [
-    "aeronet_webtransport/client"
-]
-server = [
-    "aeronet_webtransport/server",
-]
+client = ["aeronet_webtransport/client"]
+server = ["aeronet_webtransport/server", "bevy_reflect/std"]
 
 ## Enables `wtransport/self-signed`, allowing you to generate self-signed certificates easily for
 ## use in a server.
@@ -44,6 +40,12 @@ aeronet_webtransport.workspace = true
 aeronet_io.workspace = true
 lightyear_link.workspace = true
 lightyear_aeronet.workspace = true
-bevy.workspace = true
+
+tracing.workspace = true
+
+# bevy
+bevy_app.workspace = true
+bevy_ecs.workspace = true
+bevy_reflect = { workspace = true, optional = true }
 
 thiserror.workspace = true
