--- a/demos/spaceships/Cargo.toml
+++ b/demos/spaceships/Cargo.toml
@@ -10,21 +10,10 @@ publish = false
 
 [features]
 default = ["client", "gui", "server", "netcode", "udp"]
-client = [
-  "gui",
-  "lightyear/client",
-  "lightyear_examples_common/client"
-]
-gui = [
-  "lightyear_examples_common/gui"
-]
-server = [
-  "lightyear/server",
-  "lightyear_examples_common/server"
-]
-netcode = [
-  "lightyear_examples_common/netcode"
-]
+client = ["gui", "lightyear/client", "lightyear_examples_common/client"]
+gui = ["lightyear_examples_common/gui"]
+server = ["lightyear/server", "lightyear_examples_common/server"]
+netcode = ["lightyear_examples_common/netcode"]
 udp = [
   "lightyear_examples_common/udp",
   # udp requires std
@@ -54,7 +43,7 @@ avian2d = { workspace = true, features = [
 serde.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
-bevy.workspace = true
+bevy = { workspace = true, features = ["bevy_state"] }
 
 [lints]
 workspace = true
