--- a/lightyear_inputs_leafwing/Cargo.toml
+++ b/lightyear_inputs_leafwing/Cargo.toml
@@ -31,6 +31,7 @@ bevy_app.workspace = true
 bevy_ecs.workspace = true
 bevy_input.workspace = true
 bevy_math.workspace = true
+bevy_platform.workspace = true
 bevy_reflect.workspace = true
 
 [lints]
