--- a/lightyear/Cargo.toml
+++ b/lightyear/Cargo.toml
@@ -36,7 +36,7 @@ std = [
   "lightyear_messages/std",
   "lightyear_netcode?/std",
   "lightyear_prediction?/std",
-  "lightyear_replication/std",
+  "lightyear_replication?/std",
   "lightyear_serde/std",
   "lightyear_steam?/std",
   "lightyear_sync/std",
@@ -51,7 +51,7 @@ client = [
   "lightyear_inputs_native?/client",
   "lightyear_messages/client",
   "lightyear_netcode?/client",
-  "lightyear_replication/client",
+  "lightyear_replication?/client",
   "lightyear_steam?/client",
   "lightyear_sync/client",
   "lightyear_transport/client",
@@ -67,7 +67,7 @@ server = [
   "lightyear_messages/server",
   "lightyear_netcode?/server",
   "lightyear_prediction?/server",
-  "lightyear_replication/server",
+  "lightyear_replication?/server",
   "lightyear_steam?/server",
   "lightyear_sync/server",
   "lightyear_transport/server",
@@ -75,7 +75,9 @@ server = [
   "lightyear_webtransport?/server",
 ]
 ## Enables replicating entities between two peers
-replication = []
+replication = [
+  "dep:lightyear_replication",
+]
 ## Enables client-side prediction handling to mask latency for local player actions
 prediction = [
   "dep:lightyear_prediction",
@@ -91,7 +93,7 @@ interpolation = [
 ]
 trace = [
   "lightyear_netcode?/trace",
-  "lightyear_replication/trace",
+  "lightyear_replication?/trace",
   "lightyear_transport/trace",
 ]
 ## enable metrics collection (via `metrics` crate)
@@ -155,7 +157,7 @@ lightyear_netcode = { workspace = true, optional = true }
 lightyear_interpolation = { workspace = true, optional = true }
 lightyear_prediction = { workspace = true, optional = true }
 lightyear_messages.workspace = true
-lightyear_replication.workspace = true
+lightyear_replication = {workspace = true, optional = true}
 lightyear_sync.workspace = true
 lightyear_transport.workspace = true
 lightyear_serde.workspace = true
