--- a/lightyear_crossbeam/Cargo.toml
+++ b/lightyear_crossbeam/Cargo.toml
@@ -10,6 +10,9 @@ repository = "https://github.com/cBournhonesque/lightyear"
 
 [features]
 default = []
+test_utils = [
+    "lightyear_core/test_utils"
+]
 
 [dependencies]
 lightyear_core.workspace = true
