--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -63,8 +63,7 @@ jobs:
           # needs to be in sync with [package.metadata.docs.rs]
           RUSTFLAGS: --cfg docsrs_dep -A mismatched_lifetime_syntaxes
           RUSTDOCFLAGS: --cfg=docsrs
-        # exclude avian_3d_character to only use lightyear_avian/2d features
-        run: cargo +nightly doc --features="lightyear_core/not_mock,lightyear/steam" --workspace --exclude=avian_3d_character --document-private-items --no-deps --keep-going
+        run: cargo +nightly doc --all-features --workspace --document-private-items --no-deps --keep-going
 
   test:
     name: Test
@@ -109,7 +108,7 @@ jobs:
           path: lcov.info
 
       - name: Test doc
-        run: cargo test --locked --workspace --doc --exclude=avian_3d_character --features=lightyear_core/not_mock --no-fail-fast
+        run: cargo test --locked --workspace --doc --all-features --no-fail-fast
 
   codecov:
     name: Upload to Codecov
