--- a/examples/simple_box/Cargo.toml
+++ b/examples/simple_box/Cargo.toml
@@ -13,24 +13,15 @@ publish = false
 
 [features]
 default = ["client", "gui", "server", "netcode", "udp"]
-client = [
-  "gui",
-  "lightyear/client",
-  "lightyear_examples_common/client"
-]
+client = ["gui", "lightyear_examples_common/client"]
 gui = [
   "lightyear_examples_common/gui"
 ]
-server = [
-  "lightyear/server",
-  "lightyear_examples_common/server"
-]
-netcode = [
-  "lightyear_examples_common/netcode"
-]
-udp = [
-  "lightyear_examples_common/udp",
-  "lightyear/udp",
+server = ["lightyear_examples_common/server"]
+netcode = ["lightyear_examples_common/netcode"]
+udp = ["lightyear_examples_common/udp"]
+steam = [
+  "lightyear_examples_common/steam"
 ]
 
 
